add HTML part and images folder

--- a/index.html
+++ b/index.html
@@ -5,7 +5,99 @@
 	<title>Document</title>
 </head>
 <body>
+	<div id="noMoreReminder">
+		<span>网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势</span>
+		<a href="">立即查看></a>
+		<span id="noReminderButton">×不再提醒</span>
+	</div>
 
-	hi there
+	<div id="banner">
+		<ul>
+			<li><img src="./images/banner1.jpg" alt=""></li>
+			<li><img src="./images/banner2.jpg" alt=""></li>
+			<li><img src="./images/banner3.jpg" alt=""></li>
+		</ul>
+	</div>
+
+	<div id="jigouIntro">
+		<div></div>
+		<div></div>
+		<div></div>
+	</div>
+
+	<div id="workEnvi">
+		<ul>
+			<li><img src="./images/work1.jpg" alt=""></li>
+			<li><img src="./images/work2.jpg" alt=""></li>
+			<li><img src="./images/work3.jpg" alt=""></li>
+			<li><img src="./images/work4.jpg" alt=""></li>
+			<li><img src="./images/work5.jpg" alt=""></li>
+		</ul>
+	</div>
+	<div id="course">
+		<div id="main">
+			<div id="tab">
+				
+			</div>
+			<div id="courseList">
+				
+			</div>
+			<div id="pageNo">
+				<ul>
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+					<li>5</li>
+					<li>6</li>
+					<li>7</li>
+					<li>8</li>
+				</ul>
+			</div>
+		</div>
+		<div id="side">
+			<div id="jigouIntro">
+				机构介绍
+				<hr/>
+			</div>
+			<div>
+				最热排行
+				<hr/>
+			</div>
+		</div>
+	</div>
+
+	<div id="footer">
+		<div id="footer_content">
+			<div>
+				<p>EDU 网易教育产品部</p>
+				<p>©2014 icourse163.org 浙ICP备08114786号-1</p>
+				<p>icourse163.cn 京ICP备12020869号-2 京公网备110102000459-2</p>
+			</div>
+			<div>
+				<span>友情链接：</span>
+				<ul>
+					<li><a href="">网易公开课</a></li>
+					<li><a href="">网易云课堂</a></li>
+					<li><a href="">中国大学MOOC</a></li>
+				</ul>
+			</div>
+			<div>
+				<span>我们：</span>
+				<ul>
+					<li><a href="">关于</a></li>
+					<li><a href="">联系</a></li>
+					<li><a href="">关注</a><img src="./images/weiboicon.png" alt=""></li>
+				</ul>
+			</div>
+			<div>
+				<span>更多：</span>
+				<ul>
+					<li><a href="">常见问题</a></li>
+					<li><a href="">意见反馈</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
