--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 	<title>Document</title>
 </head>
 <body>
+	<form action="http://study.163.com /webDev/login.htm" method="get" id="getLogin">
+		<caption>登录网易云课堂</caption>
+		<input type="text" placeholder="帐号">
+		<input type="password" placeholder="密码">
+		<button>登录</button>
+	</form>
+	<div>
+		<p>请观看下面的视频</p>
+		<video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls></video>
+	</div>
 	<div id="noMoreReminder">
 		<span>网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势</span>
 		<a href="">立即查看></a>
