--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="reset.css">
 </head>
 <body>
 	<form action="http://study.163.com /webDev/login.htm" method="get" id="getLogin">
@@ -13,7 +14,7 @@
 	</form>
 	<div>
 		<p>请观看下面的视频</p>
-		<video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls></video>
+		<video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls poster="images/videoposter.png" autoplay></video>
 	</div>
 	<div id="noMoreReminder">
 		<span>网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势</span>
@@ -23,9 +24,9 @@
 
 	<div id="banner">
 		<ul>
-			<li><img src="./images/banner1.jpg" alt=""></li>
-			<li><img src="./images/banner2.jpg" alt=""></li>
-			<li><img src="./images/banner3.jpg" alt=""></li>
+			<li><img src="images/banner1.jpg" alt=""></li>
+			<li><img src="images/banner2.jpg" alt=""></li>
+			<li><img src="images/banner3.jpg" alt=""></li>
 		</ul>
 	</div>
 
@@ -37,11 +38,11 @@
 
 	<div id="workEnvi">
 		<ul>
-			<li><img src="./images/work1.jpg" alt=""></li>
-			<li><img src="./images/work2.jpg" alt=""></li>
-			<li><img src="./images/work3.jpg" alt=""></li>
-			<li><img src="./images/work4.jpg" alt=""></li>
-			<li><img src="./images/work5.jpg" alt=""></li>
+			<li><img src="images/work1.jpg" alt=""></li>
+			<li><img src="images/work2.jpg" alt=""></li>
+			<li><img src="images/work3.jpg" alt=""></li>
+			<li><img src="images/work4.jpg" alt=""></li>
+			<li><img src="images/work5.jpg" alt=""></li>
 		</ul>
 	</div>
 	<div id="course">
@@ -73,6 +74,8 @@
 			<div>
 				最热排行
 				<hr/>
+				<p>观看下面的视频来了解吧：</p>
+				<video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4"  poster="images/jigouintro.png"></video>
 			</div>
 		</div>
 	</div>
@@ -97,7 +100,7 @@
 				<ul>
 					<li><a href="">关于</a></li>
 					<li><a href="">联系</a></li>
-					<li><a href="">关注</a><img src="./images/weiboicon.png" alt=""></li>
+					<li><a href="">关注</a><img src="images/weiboicon.png" alt=""></li>
 				</ul>
 			</div>
 			<div>
