add footer style

--- a/index.html
+++ b/index.html
@@ -130,32 +130,32 @@
 
 	<div id="footer">
 		<div id="footer_content">
-			<div>
-				<p>EDU 网易教育产品部</p>
-				<p>©2014 icourse163.org 浙ICP备08114786号-1</p>
-				<p>icourse163.cn 京ICP备12020869号-2 京公网备110102000459-2</p>
-			</div>
-			<div>
-				<span>友情链接：</span>
+			<div id="footer_content_left">
+				<p class="edu">EDU | 网易教育产品部</p>
 				<ul>
-					<li><a href="">网易公开课</a></li>
-					<li><a href="">网易云课堂</a></li>
-					<li><a href="">中国大学MOOC</a></li>
+					<li>©2014 icourse163.org 浙ICP备08114786号-1</li>
+					<li>icourse163.cn 京ICP备12020869号-2 京公网备110102000459-2</li>
 				</ul>
 			</div>
-			<div>
-				<span>我们：</span>
+			<div id="footer_content_right">
 				<ul>
-					<li><a href="">关于</a></li>
-					<li><a href="">联系</a></li>
-					<li><a href="">关注</a><img src="images/weiboicon.png" alt=""></li>
-				</ul>
-			</div>
-			<div>
-				<span>更多：</span>
-				<ul>
-					<li><a href="">常见问题</a></li>
-					<li><a href="">意见反馈</a></li>
+					<li>
+						<p>友情链接:</p>
+						<p><a href="">网易公开课</a></p>
+						<p><a href="">网易云课堂</a></p>
+						<p><a href="">中国大学MOOC</a></p>
+					</li>
+					<li>
+						<p>我们:</p>
+						<p><a href="">关于</a></p>
+						<p><a href="">联系</a></p>
+						<p><a href="">关注 <img src="images/weiboicon.png" alt=""></a></p>
+					</li>
+					<li>
+						<p>更多:</p>
+						<p><a href="">常见问题</a></p>
+						<p><a href="">意见反馈</a></p>
+					</li>
 				</ul>
 			</div>
 		</div>
