--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<form action="http://study.163.com /webDev/login.htm" method="get" id="getLogin">
-		<caption>登录网易云课堂</caption>
-		<input type="text" placeholder="帐号">
-		<input type="password" placeholder="密码">
-		<button>登录</button>
-	</form>
-	<div>
+	<div class="mask" id="mask"></div>
+	<div id="login_box">
+		<form action="http://study.163.com /webDev/login.htm" method="get" id="login_form">
+			<caption>登录网易云课堂</caption>
+			<input type="text" placeholder="帐号">
+			<input type="password" placeholder="密码">
+			<button>登录</button>
+		</form>
+	</div>
+	<div id="up_video">
 		<p>请观看下面的视频</p>
-		<video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls poster="images/videoposter.png"></video>
+		<video width="890px" height="565px;" src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls poster="images/videoposter.png"></video>
+		<div class="close_button">×</div>
 	</div>
 	<div id="noMoreReminder">
 		<div id="noMoreReminder_content">
