--- a/index.html
+++ b/index.html
@@ -44,10 +44,15 @@
 		</div>
 
 		<div id="banner_pic">
-			<ul>
-				<li><img src="images/banner1.jpg" alt=""></li>
+			<ul class="bannerpic">
+				<li ><img src="images/banner1.jpg" alt="" ></li>
 				<li><img src="images/banner2.jpg" alt=""></li>
-				<li><img src="images/banner3.jpg" alt=""></li>
+				<li><img src="images/banner3.jpg" alt="" ></li>
+			</ul>
+			<ul class="quanquan">
+				<li class="checked"></li>
+				<li></li>
+				<li></li>
 			</ul>
 		</div>
 
@@ -80,13 +85,14 @@
 			</ul>
 		</div>
 		<div id="banner_workEnvi">
-		<ul>
-			<li><img src="images/work1.jpg" alt=""></li>
-			<li><img src="images/work2.jpg" alt=""></li>
-			<li><img src="images/work3.jpg" alt=""></li>
-			<li><img src="images/work4.jpg" alt=""></li>
-			<li><img src="images/work5.jpg" alt=""></li>
-		</ul>
+			<ul>
+				<li><img src="images/work1.jpg" alt=""></li>
+				<li><img src="images/work2.jpg" alt=""></li>
+				<li><img src="images/work3.jpg" alt=""></li>
+				<li><img src="images/work4.jpg" alt=""></li>
+				<li><img src="images/work5.jpg" alt=""></li>
+			</ul>
+			
 	</div>
 	</div>
 	
