update course list ajax

--- a/index.html
+++ b/index.html
@@ -104,7 +104,93 @@
 				<div>编程语言</div>
 			</div>
 			<div id="courseList">
-				
+				<ul class="clearfix">
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥810.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+					<li class="main_course">
+						<img class="main_course_pic" src="images/work1.jpg" alt="">
+						<p class="course_intro">混音全揭秘 舞曲实战篇 混音全揭秘 舞曲实战篇</p>
+						<p class="course_teacher">音频帮</p>
+						<p class="course_follower">510</p>
+						<p class="course_price">￥800.00</p>
+					</li>
+				</ul>
 			</div>
 			<div id="pageNo">
 				<ul>
@@ -131,8 +217,39 @@
 			</div>
 			<div id="side_hotlist">
 				<span>最热排行</span>
-				<div>
-					
+				<div id="side_courses">
+					<ul>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+						<li>
+							<img class="side_course" src="images/work1.jpg" alt="">
+							<p class="side_course_title">舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘舞曲揭秘</p>
+							<p>21567</p>
+						</li>
+					</ul>
 				</div>			
 			</div>
 		</div>
