add md5 file and update some styles

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 	<div id="banner">
 		<div id="banner_nav">
 			<span class="edu"><span>EDU | </span>网易教育产品部 </span>
-			<span class="guanzhu">+关注</span>
-			<span>粉丝 45</span>
+			<span class="guanzhu"><a href="">+关注</a></span>
+			<div class="alreadyguanzhu"><span>√已关注</span><span><a id="cancelguanzhu" href="">| 取消</a></span></div>
+			<span class="follower">粉丝 45</span>
 			<div class="threeproduct">
 				<ul class="">
 					<li>网易公开课</li>
@@ -176,5 +177,6 @@
 		</div>
 	</div>
 </body>
+<script src="md5.js"></script>
 <script src="script.js"></script>
 </html>
