--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div id="noMoreReminder_content">
 			<span>网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势!</span>
 			<a href="">立即查看></a>
-			<span id="noReminderButton">×不再提醒</span>
+			<span id="noReminderButton"><a>×不再提醒</a></span>
 		</div>
 	</div>
 	<div id="banner">
