add close button of loginbox

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<input type="password" placeholder="密码">
 			<button>登录</button>
 		</form>
+		<div class="close_button">×</div>
 	</div>
 	<div id="up_video">
 		<p>请观看下面的视频</p>
