fix guanzhu ajax

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<input type="password" placeholder="密码">
 			<button>登录</button>
 		</form>
-		<div class="close_button">×</div>
+		<div class="close_button"><a>×</a></div>
 	</div>
 	<div id="up_video">
 		<p>请观看下面的视频</p>
 		<video width="890px" height="565px;" src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" controls poster="images/videoposter.png"></video>
-		<div class="close_button">×</div>
+		<div class="close_button"><a>×</a></div>
 	</div>
 	<div id="noMoreReminder">
 		<div id="noMoreReminder_content">
@@ -32,7 +32,7 @@
 	<div id="banner">
 		<div id="banner_nav">
 			<span class="edu"><span>EDU | </span>网易教育产品部 </span>
-			<span class="guanzhu"><a href="">+关注</a></span>
+			<span class="guanzhu"><a href="javascript:">+关注</a></span>
 			<div class="alreadyguanzhu"><span>√已关注</span><span><a id="cancelguanzhu" href="">| 取消</a></span></div>
 			<span class="follower">粉丝 45</span>
 			<div class="threeproduct">
