fix login ajax bug

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	<div class="mask" id="mask"></div>
 	<div id="login_box">
-		<form action="http://study.163.com /webDev/login.htm" method="get" id="login_form">
+		<div id="login_form">
 			<caption>登录网易云课堂</caption>
-			<input type="text" placeholder="帐号">
-			<input type="password" placeholder="密码">
-			<button>登录</button>
-		</form>
+			<input type="text" id="login_account"placeholder="帐号">
+			<input type="password" id="login_password" placeholder="密码">
+			<button id="login_button">登录</button>
+		</div>
 		<div class="close_button"><a>×</a></div>
 	</div>
 	<div id="up_video">
