--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			<span class="follower">粉丝 45</span>
 			<div class="threeproduct">
 				<ul class="">
-					<li>网易公开课</li>
-					<li>云课堂</li>
-					<li>中国大学MOOC</li>
+					<li><a href="http://open.163.com">网易公开课</a></li>
+					<li><a href="http://study.163.com">云课堂</a></li>
+					<li><a href="http://www.icourse163.org">中国大学MOOC</a></li>
 					<li><img src="images/fangdajingicon.png" alt=""></li>
 				</ul>
 			</div>
@@ -65,7 +65,7 @@
 					<div>
 						<p>网易公开课</p>
 						<p>推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</p>
-						<p>了解更多 ></p>
+						<p><a href="http://open.163.com">了解更多 ></a></p>
 					</div>
 				</li>
 				<li>
@@ -73,7 +73,7 @@
 					<div>
 						<p>云课堂</p>
 						<p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。</p>
-						<p>了解更多 ></p>
+						<p><a href="http://study.163.com">了解更多 ></a></p>
 					</div>
 				</li>
 				<li>
@@ -81,7 +81,7 @@
 					<div>
 						<p>中国大学MOOC</p>
 						<p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人,都可以在这里学习中国最好的大学课程，学完还能获得认证证书。</p>
-						<p>了解更多 ></p>
+						<p><a href="http://www.icourse163.org">了解更多 ></a></p>
 					</div>
 				</li>
 			</ul>
@@ -102,8 +102,8 @@
 	<div id="course" class="clearfix">
 		<div id="main">
 			<div id="tab">
-				<div>产品设计</div>
-				<div>编程语言</div>
+				<div id="main_course_tab1" class="main_course_tab_checked">产品设计</div>
+				<div id="main_course_tab2" class="main_course_tab">编程语言</div>
 			</div>
 			<div id="courseList">
 				<ul id="courselist_ajax" class="clearfix">
@@ -114,8 +114,8 @@
 			<div id="pageNo">
 				<ul>
 					<li class="direct"><</li>
-					<li>1</li>
-					<li class="currentpage">2</li>
+					<li class="currentpage">1</li>
+					<li>2</li>
 					<li>3</li>
 					<li>4</li>
 					<li>5</li>
