--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			</div>
 			<div id="pageNo">
 				<ul>
-					<li class="direct"><</li>
+					<li class="direct direct_left"><</li>
 					<li class="currentpage">1</li>
 					<li>2</li>
 					<li>3</li>
@@ -122,7 +122,7 @@
 					<li>6</li>
 					<li>7</li>
 					<li>8</li>
-					<li class="direct">></li>
+					<li class="direct direct_right">></li>
 				</ul>
 			</div>
 		</div>
