add the hotlist rolling up function

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		<div id="banner_nav">
 			<span class="edu"><span>EDU | </span>网易教育产品部 </span>
 			<span class="guanzhu"><a href="javascript:">+关注</a></span>
-			<div class="alreadyguanzhu"><span>√已关注</span><span><a id="cancelguanzhu" href="">| 取消</a></span></div>
+			<div class="alreadyguanzhu"><span>√已关注</span><span > | </span><span><a id="cancelguanzhu" href="">取消</a></span>
+			</div>
 			<span class="follower">粉丝 45</span>
 			<div class="threeproduct">
 				<ul class="">
