--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
 		<div id="banner_pic">
 			<ul class="bannerpic">
-				<li ><img src="images/banner1.jpg" alt="" ></li>
-				<li><img src="images/banner2.jpg" alt=""></li>
-				<li><img src="images/banner3.jpg" alt="" ></li>
+				<li index="1"><a href="http://www.icourse163.org"><img src="images/banner3.jpg" alt="" ></a></li>
+				<li index="2"><a href="http://open.163.com"><img src="images/banner1.jpg" alt="" ></a></li>
+				<li index="3"><a href="http://study.163.com"><img src="images/banner2.jpg" alt=""></a></li>
+				<li index="4"><a href="http://www.icourse163.org"><img src="images/banner3.jpg" alt="" ></a></li>
+				<li index="5"><a href="http://open.163.com"><img src="images/banner1.jpg" alt="" ></a></li>
 			</ul>
 			<ul class="quanquan">
 				<li class="checked"></li>
