--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
 		<div id="banner_pic">
 			<ul class="bannerpic">
-				<li index="1"><a href="http://open.163.com"><img src="images/banner1.jpg" alt="" ></a></li>
-				<li index="2"><a href="http://study.163.com"><img src="images/banner2.jpg" alt=""></a></li>
-				<li index="3"><a href="http://www.icourse163.org"><img src="images/banner3.jpg" alt="" ></a></li>
+				<li index="0"><a href="http://open.163.com"><img src="images/banner1.jpg" alt="" ></a></li>
+				<li index="1"><a href="http://study.163.com"><img src="images/banner2.jpg" alt=""></a></li>
+				<li index="2"><a href="http://www.icourse163.org"><img src="images/banner3.jpg" alt="" ></a></li>
 			</ul>
 			<ul class="quanquan">
-				<li class="checked"></li>
-				<li></li>
-				<li></li>
+				<li index="0" class="checked"></li>
+				<li index="1"></li>
+				<li index="2"></li>
 			</ul>
 		</div>
 
